@@ -1,8 +1,10 @@
 <table width="99%" border="0" cellspacing="0" cellpadding="4" align="center">
+{if !$FRAMEWORK_TIENE_TITULO_MODULO}
     <tr class="moduleTitle">
-        <td class="moduleTitle" valign="middle">&nbsp;&nbsp;<img src="{$IMG}" border="0" align="absmiddle">&nbsp;&nbsp;{$TITLE}</td>
+        <td class="moduleTitle" valign="middle">&nbsp;&nbsp;<img src="{$icon}" border="0" align="absmiddle" />&nbsp;&nbsp;{$title}</td>
         <td></td>
     </tr>
+{/if}    
     <tr class="letra12">
         <td align="left"><input class="button" type="submit" name="save" value="{$SAVE}"></td>
         <td align="right" nowrap><span class="letra12"><span  class="required">*</span> {$REQUIRED_FIELD}</span></td>
