@@ -1,3 +1,6 @@
+* CallCenter Configuration: fix title display under elastixneo theme
+* CallCenter Configuration: import elastix2.lib.php instead of defining 
+  functions _tr and load_language_module
 * Agent Console: add new function to check whether framework contains support
   for display of module title.
 
